--- a/style.css
+++ b/style.css
@@ -1,4 +1,34 @@
 body {
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif
-    
+}
+
+.name {
+    font-size: 100px;
+    text-align: center;
+}
+
+.quote {
+    text-align: center;
+    position: relative;
+    background-color: #f0f0f0;
+    border-radius: 10px;
+    padding: 10px 15px;
+    max-width: 60%;
+    margin: 20px auto;
+}
+
+.quote::before {
+
+    content: "";
+    position: absolute;
+    border-style: solid;
+    border-width: 10px 10px 10px 0;
+    border-color: transparent #f0f0f0 transparent transparent;
+    top: 50%;
+    left: -10px;
+    transform: translateY(-50%);
+}
+
+.job {
+    text-align: center;
 }
