--- a/style.css
+++ b/style.css
@@ -1,5 +1,8 @@
 body {
-    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    max-width: 1000px;
+    margin: 0 auto;
+    padding: 20px;
 }
 
 .name {
@@ -61,4 +64,10 @@ body {
     display: flex;
     justify-content: space-evenly;
     list-style: circle;
+}
+
+img {
+    max-width: 1000px;
+    margin: 0 auto;
+    padding: 20px;
 }
