--- a/style.css
+++ b/style.css
@@ -3,6 +3,10 @@ body {
     max-width: 1000px;
     margin: 0 auto;
     padding: 20px;
+    background-image: url(joe-and-rocko.jpeg);
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
 }
 
 .name {
@@ -70,4 +74,5 @@ img {
     max-width: 1000px;
     margin: 0 auto;
     padding: 20px;
+    background-size: cover;
 }
