--- a/style.css
+++ b/style.css
@@ -1,14 +1,30 @@
+body,html {
+    height: 100%;
+}
+
 body {
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    max-width: 1000px;
-    margin: 0 auto;
-    padding: 20px;
-    background-image: url(joe-and-rocko.jpeg);
+    max-width: 100px;
+    max-height: 100px;
+    background-image: url(./Joe_Rocko_crop.jpeg);
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
+    justify-content: center;
+    align-items: center;
 }
 
+.text {
+    /*position: absolute;
+    top: 50%; /* Adjust vertical position */
+    /*left: 50%; /* Adjust horizontal position */
+    /*transform: translate(-50%, -50%); /* Center the content */
+    width: 400px;
+    padding: 20px;
+    margin: 150px 20px 150px 225px;
+    background-color: rgba(255, 255, 255, 0.8); /* Add a semi-transparent background color */
+    
+}
 .name {
     font-size: 100px;
     text-align: center;
@@ -16,7 +32,7 @@ body {
 
 .quote {
     text-align: center;
-    position: relative;
+    /*position: relative;*/
     background-color: #f0f0f0;
     border-radius: 10px;
     padding: 10px 15px;
@@ -27,13 +43,13 @@ body {
 .quote::before {
 
     content: "";
-    position: absolute;
+    /*position: absolute;*/
     border-style: solid;
     border-width: 10px 10px 10px 0;
     border-color: transparent #f0f0f0 transparent transparent;
     top: 50%;
     left: -10px;
-    transform: translateY(-50%);
+    /*transform: translateY(-50%);*/
 }
 
 .job {
@@ -68,11 +84,4 @@ body {
     display: flex;
     justify-content: space-evenly;
     list-style: circle;
-}
-
-img {
-    max-width: 1000px;
-    margin: 0 auto;
-    padding: 20px;
-    background-size: cover;
 }
