--- a/style.css
+++ b/style.css
@@ -3,9 +3,6 @@ body,html {
 }
 
 body {
-    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    max-width: 100px;
-    max-height: 100px;
     background-image: url(./Joe_Rocko_crop.jpeg);
     background-size: cover;
     background-position: center;
@@ -15,25 +12,23 @@ body {
 }
 
 .text {
-    /*position: absolute;
-    top: 50%; /* Adjust vertical position */
-    /*left: 50%; /* Adjust horizontal position */
-    /*transform: translate(-50%, -50%); /* Center the content */
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     width: 400px;
-    padding: 20px;
-    margin: 150px 20px 150px 225px;
-    background-color: rgba(255, 255, 255, 0.8); /* Add a semi-transparent background color */
+    height: auto;
+    padding: 10px;
+    margin: 70px 20px 150px 225px;
+    background-color: rgba(255, 255, 255, 0.8);
     
 }
 .name {
-    font-size: 100px;
+    font-size: 50px;
     text-align: center;
 }
 
 .quote {
+    font-size: 20px;
     text-align: center;
-    /*position: relative;*/
-    background-color: #f0f0f0;
+    background-color: #eff30f;
     border-radius: 10px;
     padding: 10px 15px;
     max-width: 60%;
