--- a/style.css
+++ b/style.css
@@ -18,8 +18,10 @@ body {
     padding: 10px;
     margin: 70px 20px 150px 225px;
     background-color: rgba(255, 255, 255, 0.8);
-    
+    border-radius: 20px;
+    position: absolute;
 }
+
 .name {
     font-size: 50px;
     text-align: center;
@@ -27,24 +29,10 @@ body {
 
 .quote {
     font-size: 20px;
+    font-style: italic;
     text-align: center;
-    background-color: #eff30f;
     border-radius: 10px;
-    padding: 10px 15px;
-    max-width: 60%;
-    margin: 20px auto;
-}
-
-.quote::before {
-
-    content: "";
-    /*position: absolute;*/
-    border-style: solid;
-    border-width: 10px 10px 10px 0;
-    border-color: transparent #f0f0f0 transparent transparent;
-    top: 50%;
-    left: -10px;
-    /*transform: translateY(-50%);*/
+    padding:
 }
 
 .job {
@@ -55,24 +43,30 @@ body {
     display: flex;
     justify-content: space-evenly;
     list-style: none;
+    font-size: 20px;
 }
 
 .skills-bottom {
     display: flex;
     justify-content: space-evenly;
     list-style: none;
+    font-size: 20px;
 }
 
 .skills {
-    font-size: 27px;
+    font-size: 25px;
 }
 
 .background {
-    font-size: 27px;
+    font-size: 25px;
+}
+
+.background-text {
+    font-size: 20px;
 }
 
 .connect {
-    font-size: 27px;
+    font-size: 25px;
 }
 
 .contact {
