--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ body {
     width: 400px;
     height: auto;
     padding: 10px;
-    margin: 70px 20px 150px 225px;
+    margin: 25px 20px 150px 225px;
     background-color: rgba(255, 255, 255, 0.8);
     border-radius: 20px;
     position: absolute;
@@ -32,7 +32,6 @@ body {
     font-style: italic;
     text-align: center;
     border-radius: 10px;
-    padding:
 }
 
 .job {
@@ -43,13 +42,15 @@ body {
     display: grid;
     grid-template-rows: 1fr 1fr 1fr;
     grid-gap: 1rem;
-    grid-template-areas: "h h h";
+    grid-template-areas: "h h h"
+                         "f f f";
     list-style: none;
+    font-size: 19px;
+    font-style: italic;
 }
 
 .skills {
     font-size: 25px;
-    padding: 5px;
 }
 
 .background {
@@ -66,6 +67,8 @@ body {
 
 .contact {
     display: flex;
-    justify-content: space-evenly;
-    list-style: circle;
+    flex-direction: row;
+    list-style: none;
+    width: 8px;
+    height: 8px;
 }
