--- a/style.css
+++ b/style.css
@@ -16,8 +16,8 @@ body {
     width: 400px;
     height: auto;
     padding: 10px;
-    margin: 25px 20px 150px 225px;
-    background-color: rgba(255, 255, 255, 0.8);
+    margin: 25px 20px 175px 225px;
+    background-color: rgba(255, 255, 255, 0.7);
     border-radius: 20px;
     position: absolute;
 }
@@ -63,12 +63,42 @@ body {
 
 .connect {
     font-size: 25px;
+    margin: 0px 0px 0px 0px;
+    padding: 0px 0px 0px 0px;
 }
 
 .contact {
     display: flex;
     flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: space-between;
     list-style: none;
-    width: 8px;
-    height: 8px;
+}
+
+.icons {
+    height: 50px;
+    width: 50px;
+    object-fit: contain;
+}
+
+
+/*
+.icons-linkedin {
+    width: 75px;
+    height: 75px;
+}
+
+.icons-github {
+    width: 80px;
+    height: 80px;
+}
+
+.icons-threads {
+    width: 50px;
+    height: 50px;
+}
+
+.icons-email {
+    width: 50px;
+    height: 50px;
 }
